# ai-coding-sessionprompt-analyzer

./: .gitignore  AI-CODING-PROMPT-OPTIMIZER-V2.MD  AI-Coding-prompt-tasklist.md  AI-coding-prompt-v1-Architecture.md  CLAUDE.md  CODE_CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFIED.md  INSIGHTS_INJECTION_USAGE.md  LICENSE  README.md  blog-post.md  pricing.aggressive.json  pricing.conservative.json  pricing.example.json  pyproject.toml  scoring.example.json  test_insights_injection.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
ai_coding_prompt_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai_dev/: analyzer_v2.py  cli.py  constants.py  costing.py  dedupe.py  feature_extractor.py  lexicon.py  lineage.py  llm_recommendations.py  models.py  parser.py  reporter.py  rule_engine.py  scoring.py  scoring_config.py  v2_antipatterns.py  v2_convergence.py  v2_cost_rate.py  v2_scoring.py
docs/: report.md
docs/archive/: README.md  tasklist-initial.md  v2-spec-draft.md
docs/specs/: product-spec.md  technical-spec.md
docs/vision/: product-vision.md
tests/: conftest.py  test_fixes.py  test_insights_injection.py  test_lineage.py  test_llm_recommendations.py  test_parser_and_dedupe.py  test_prompt_windows.py  test_usage_buckets.py  test_v2_antipatterns.py  test_v2_correction_detection.py  test_v2_scoring_clamp.py
