[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-prompt-optimizer"
version = "0.1.0"
description = "AI coding prompt analysis CLI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.scripts]
ai-dev = "ai_dev.cli:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ai_dev*"]
